IF(CMAKE_SYSTEM_PROCESSOR STREQUAL armv7l)
	SET(ARCHTYPE "\"armv7l\"")
	SET(ISDEVICE 1)
ELSE()
	SET(ARCHTYPE "\"i586\"")
	SET(ISDEVICE 0)
ENDIF()

SET(COMMON_FILE "${CMAKE_SOURCE_DIR}/src/common/tct_common.c")
SET(COMMON_APP_FILE "${CMAKE_SOURCE_DIR}/src/common/tct_app_common.c")
SET(MAXCOUNT 1)
SET(SPEEDCHECK 0)
SET(MEMORYCHECK 0)
SET(DEBUGVAL 0)
SET(ERR_LOG "\"/tmp/tclog\"")
SET(ERR_UTC_LOG "\"/tmp/utclog\"")
SET(TCT_CONFIG "\"/home/owner/share/TCT_CONFIG\"")
add_definitions(-DARCH_TYPE=${ARCHTYPE})
add_definitions(-DIS_DEVICE=${ISDEVICE})
add_definitions(-DMAX_COUNT=${MAXCOUNT})
add_definitions(-DSPEED_CHECK=${SPEEDCHECK})
add_definitions(-DMEMORY_CHECK=${MEMORYCHECK})
add_definitions(-DDEBUG=${DEBUGVAL})
add_definitions(-DERR_LOG=${ERR_LOG})
add_definitions(-DERR_UTC_LOG=${ERR_UTC_LOG})
add_definitions(-DTCT_CONFIG=${TCT_CONFIG})

IF( DEFINED MODULE )
	#~ SET(TIME_INTERVAL 500)
	#~ add_definitions(-DINTERVAL=${TIME_INTERVAL})
	IF(NOT DEFINED BUILDTCTYPE)
		MESSAGE(FATAL_ERROR "BUILDTCTYPE variable not defined")
	ENDIF(NOT DEFINED BUILDTCTYPE)
	IF(NOT DEFINED DEVICE_BUILD_TYPE)
		MESSAGE(FATAL_ERROR "DEVICE_BUILD_TYPE variable not defined")
	ENDIF(NOT DEFINED DEVICE_BUILD_TYPE)

	IF(ASANBUILD STREQUAL true)
		MESSAGE(STATUS "*********${BUILDTCTYPE}/${MODULE} : Building for Address Sanitizer************************************************************************")
		SET(ASAN 1)
		add_definitions(-DASAN=${ASAN})
	ENDIF()
	IF(DEVICE_BUILD_TYPE STREQUAL mobile)
		SET(MOBILE 1)
		add_definitions(-DMOBILE=${MOBILE})
	ENDIF()
	IF(DEVICE_BUILD_TYPE STREQUAL wearable)
		SET(WEARABLE 1)
		add_definitions(-DWEARABLE=${WEARABLE})
	ENDIF()
	IF(DEVICE_BUILD_TYPE STREQUAL tv)
		SET(TV 1)
		add_definitions(-DTV=${TV})
	ENDIF()
	IF(DEVICE_BUILD_TYPE STREQUAL tizeniot)
		SET(TIZENIOT 1)
		add_definitions(-DTIZENIOT=${TIZENIOT})
	ENDIF()
	MESSAGE(STATUS "*********src/CMakeLists.txt: DEVICE BUILD TYPE: ${DEVICE_BUILD_TYPE}")
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/${MODULE}")
	ADD_SUBDIRECTORY(${BUILDTCTYPE}/${MODULE})
ELSE( DEFINED MODULE )

	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/audio-io")
	ADD_SUBDIRECTORY(utc/audio-io)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/calendar-service2")
	ADD_SUBDIRECTORY(utc/calendar-service2)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/contacts-service2")
	ADD_SUBDIRECTORY(utc/contacts-service2)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/accounts-svc")
	ADD_SUBDIRECTORY(utc/accounts-svc)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/appcore-agent")
	ADD_SUBDIRECTORY(utc/appcore-agent)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/application")
	ADD_SUBDIRECTORY(utc/application)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/app-manager")
	ADD_SUBDIRECTORY(utc/app-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/badge")
	ADD_SUBDIRECTORY(utc/badge)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/base-utils")
	ADD_SUBDIRECTORY(utc/base-utils)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/battery-monitor")
	ADD_SUBDIRECTORY(utc/battery-monitor)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/bluetooth")
	ADD_SUBDIRECTORY(utc/bluetooth)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/bundle")
	ADD_SUBDIRECTORY(utc/bundle)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/camera")
	ADD_SUBDIRECTORY(utc/camera)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/capi-media-tool")
	ADD_SUBDIRECTORY(utc/capi-media-tool)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/capi-message-port")
	ADD_SUBDIRECTORY(utc/capi-message-port)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/connection")
	ADD_SUBDIRECTORY(utc/connection)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/motion")
	ADD_SUBDIRECTORY(utc/motion)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/data-control")
	ADD_SUBDIRECTORY(utc/data-control)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/device")
	ADD_SUBDIRECTORY(utc/device)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/dlog")
	ADD_SUBDIRECTORY(utc/dlog)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/efl-extension")
	ADD_SUBDIRECTORY(utc/efl-extension)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/efl-util")
	ADD_SUBDIRECTORY(utc/efl-util)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/email")
	ADD_SUBDIRECTORY(utc/email)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/fido-client")
	ADD_SUBDIRECTORY(utc/fido-client)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/image-util")
	ADD_SUBDIRECTORY(utc/image-util)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/iotcon")
	ADD_SUBDIRECTORY(utc/iotcon)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/key-manager")
	ADD_SUBDIRECTORY(utc/key-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/libstorage")
	ADD_SUBDIRECTORY(utc/libstorage)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/location-manager")
	ADD_SUBDIRECTORY(utc/location-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/mediacodec")
	ADD_SUBDIRECTORY(utc/mediacodec)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/media-content")
	ADD_SUBDIRECTORY(utc/media-content)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/media-controller")
	ADD_SUBDIRECTORY(utc/media-controller)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/media-key")
	ADD_SUBDIRECTORY(utc/media-key)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/messages")
	ADD_SUBDIRECTORY(utc/messages)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/metadata-extractor")
	ADD_SUBDIRECTORY(utc/metadata-extractor)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/mime-type")
	ADD_SUBDIRECTORY(utc/mime-type)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/native-common")
	ADD_SUBDIRECTORY(utc/native-common)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/nfc")
	ADD_SUBDIRECTORY(utc/nfc)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/notification")
	ADD_SUBDIRECTORY(utc/notification)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/package-manager")
	ADD_SUBDIRECTORY(utc/package-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/player")
	ADD_SUBDIRECTORY(utc/player)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/player-display")
	ADD_SUBDIRECTORY(utc/player-display)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/privilege-info")
	ADD_SUBDIRECTORY(utc/privilege-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/push")
	ADD_SUBDIRECTORY(utc/push)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/radio")
	ADD_SUBDIRECTORY(utc/radio)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/recorder")
	ADD_SUBDIRECTORY(utc/recorder)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/runtime-info")
	ADD_SUBDIRECTORY(utc/runtime-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/sensor")
	ADD_SUBDIRECTORY(utc/sensor)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/shortcut")
	ADD_SUBDIRECTORY(utc/shortcut)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/sound-manager")
	ADD_SUBDIRECTORY(utc/sound-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/stt")
	ADD_SUBDIRECTORY(utc/stt)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/sync-manager")
	ADD_SUBDIRECTORY(utc/sync-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/system-info")
	ADD_SUBDIRECTORY(utc/system-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/system-settings")
	ADD_SUBDIRECTORY(utc/system-settings)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/tbm")
	ADD_SUBDIRECTORY(utc/tbm)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/telephony")
	ADD_SUBDIRECTORY(utc/telephony)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/tone-player")
	ADD_SUBDIRECTORY(utc/tone-player)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/sound-pool")
	ADD_SUBDIRECTORY(utc/sound-pool)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/tts")
	ADD_SUBDIRECTORY(utc/tts)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/url-download")
	ADD_SUBDIRECTORY(utc/url-download)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/wav-player")
	ADD_SUBDIRECTORY(utc/wav-player)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/webkit2")
	ADD_SUBDIRECTORY(utc/webkit2)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/wifi")
	ADD_SUBDIRECTORY(utc/wifi)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/wifi-direct")
	ADD_SUBDIRECTORY(utc/wifi-direct)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/streamrecorder")
	ADD_SUBDIRECTORY(utc/streamrecorder)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/multi-assistant")
	ADD_SUBDIRECTORY(utc/multi-assistant)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/capi-ui-sticker")
	ADD_SUBDIRECTORY(utc/capi-ui-sticker)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/utc/webrtc")
	ADD_SUBDIRECTORY(utc/webrtc)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/accounts-svc")
	ADD_SUBDIRECTORY(itc/accounts-svc)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/appcore-agent")
	ADD_SUBDIRECTORY(itc/appcore-agent)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/app-manager")
	ADD_SUBDIRECTORY(itc/app-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/application")
	ADD_SUBDIRECTORY(itc/application)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/audio-io")
	ADD_SUBDIRECTORY(itc/audio-io)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/badge")
	ADD_SUBDIRECTORY(itc/badge)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/base-utils")
	ADD_SUBDIRECTORY(itc/base-utils)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/battery-monitor")
	ADD_SUBDIRECTORY(itc/battery-monitor)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/bluetooth")
	ADD_SUBDIRECTORY(itc/bluetooth)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/bundle")
	ADD_SUBDIRECTORY(itc/bundle)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/calendar-service2")
	ADD_SUBDIRECTORY(itc/calendar-service2)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/camera")
	ADD_SUBDIRECTORY(itc/camera)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/capi-media-tool")
	ADD_SUBDIRECTORY(itc/capi-media-tool)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/capi-nextwork-softap")
        ADD_SUBDIRECTORY(itc/capi-network-softap)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/connection")
	ADD_SUBDIRECTORY(itc/connection)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/contacts-service2")
	ADD_SUBDIRECTORY(itc/contacts-service2)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/motion")
	ADD_SUBDIRECTORY(itc/motion)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/data-control")
	ADD_SUBDIRECTORY(itc/data-control)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/device")
	ADD_SUBDIRECTORY(itc/device)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/dlog")
	ADD_SUBDIRECTORY(itc/dlog)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/efl-util")
	ADD_SUBDIRECTORY(itc/efl-util)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/email")
	ADD_SUBDIRECTORY(itc/email)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/image-util")
	ADD_SUBDIRECTORY(itc/image-util)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/key-manager")
	ADD_SUBDIRECTORY(itc/key-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/libstorage")
	ADD_SUBDIRECTORY(itc/libstorage)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/location-manager")
	ADD_SUBDIRECTORY(itc/location-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/media-codec")
	ADD_SUBDIRECTORY(itc/media-codec)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/media-content")
	ADD_SUBDIRECTORY(itc/media-content)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/media-key")
	ADD_SUBDIRECTORY(itc/media-key)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/message-port")
	ADD_SUBDIRECTORY(itc/message-port)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/messages")
	ADD_SUBDIRECTORY(itc/messages)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/metadata-extractor")
	ADD_SUBDIRECTORY(itc/metadata-extractor)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/mime-type")
	ADD_SUBDIRECTORY(itc/mime-type)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/native-common")
	ADD_SUBDIRECTORY(itc/native-common)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/nfc")
	ADD_SUBDIRECTORY(itc/nfc)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/notification")
	ADD_SUBDIRECTORY(itc/notification)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/package-manager")
	ADD_SUBDIRECTORY(itc/package-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/player")
	ADD_SUBDIRECTORY(itc/player)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/player")
	ADD_SUBDIRECTORY(itc/player-display)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/privilege-info")
	ADD_SUBDIRECTORY(itc/privilege-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/push")
	ADD_SUBDIRECTORY(itc/push)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/radio")
	ADD_SUBDIRECTORY(itc/radio)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/recorder")
	ADD_SUBDIRECTORY(itc/recorder)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/runtime-info")
	ADD_SUBDIRECTORY(itc/runtime-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/sensor")
	ADD_SUBDIRECTORY(itc/sensor)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/sound-manager")
	ADD_SUBDIRECTORY(itc/sound-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/stt")
	ADD_SUBDIRECTORY(itc/stt)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/system-info")
	ADD_SUBDIRECTORY(itc/system-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/system-settings")
	ADD_SUBDIRECTORY(itc/system-settings)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/tbm")
	ADD_SUBDIRECTORY(itc/tbm)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/telephony")
	ADD_SUBDIRECTORY(itc/telephony)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/tone-player")
	ADD_SUBDIRECTORY(itc/tone-player)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/tts")
	ADD_SUBDIRECTORY(itc/tts)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/url-download")
	ADD_SUBDIRECTORY(itc/url-download)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/wav-player")
	ADD_SUBDIRECTORY(itc/wav-player)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/webkit2")
	ADD_SUBDIRECTORY(itc/webkit2)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/webrtc")
	ADD_SUBDIRECTORY(itc/webrtc)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/wifi-direct")
	ADD_SUBDIRECTORY(itc/wifi-direct)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/wifi")
	ADD_SUBDIRECTORY(itc/wifi)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/itc/multi-assistant")
	ADD_SUBDIRECTORY(itc/multi-assistant)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/audio-io")
	ADD_SUBDIRECTORY(ctc/audio-io)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/camera")
	ADD_SUBDIRECTORY(ctc/camera)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/connection")
	ADD_SUBDIRECTORY(ctc/connection)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/device")
	ADD_SUBDIRECTORY(ctc/device)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/filesystem-permission")
	ADD_SUBDIRECTORY(ctc/filesystem-permission)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/image-util")
	ADD_SUBDIRECTORY(ctc/image-util)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/libstorage")
	ADD_SUBDIRECTORY(ctc/libstorage)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/location-manager")
	ADD_SUBDIRECTORY(ctc/location-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/media-codec")
	ADD_SUBDIRECTORY(ctc/media-codec)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/player")
	ADD_SUBDIRECTORY(ctc/player)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/runtime-info")
	ADD_SUBDIRECTORY(ctc/runtime-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/sensor")
	ADD_SUBDIRECTORY(ctc/sensor)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/sound-manager")
	ADD_SUBDIRECTORY(ctc/sound-manager)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/system-info")
	ADD_SUBDIRECTORY(ctc/system-info)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/telephony")
	ADD_SUBDIRECTORY(ctc/telephony)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/wifi-direct")
	ADD_SUBDIRECTORY(ctc/wifi-direct)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/opengl")
	ADD_SUBDIRECTORY(ctc/opengl)
	MESSAGE(STATUS "Building: ${CMAKE_CURRENT_SOURCE_DIR}/ctc/platform-permission")
	ADD_SUBDIRECTORY(ctc/platform-permission)
ENDIF()
